--- a/style.css
+++ b/style.css
@@ -51,5 +51,28 @@ body {
   width: 5vh;
   top: 80vh;
   left: 5.8vw;
-  background-color: red;
+}
+
+#down-arrow { 
+  position: absolute;
+  height: 5vh;
+  width: 5vh;
+  top: 85vh;
+  left: 5.8vw;
+}
+
+#left-arrow { 
+  position: absolute;
+  height: 5vh;
+  width: 5vh;
+  top: 85vh;
+  left: 2.8vw;
+}
+
+#right-arrow { 
+  position: absolute;
+  height: 5vh;
+  width: 5vh;
+  top: 85vh;
+  left: 8.8vw;
 }
